<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <TextView
        android:id="@+id/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_1"
        android:background="@color/colorBlue"
        android:gravity="center"
       />

    <TextView
        android:id="@+id/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_2"
        android:background="@color/colorRed"
        android:gravity="center"
        android:layout_below="@+id/blue"
        android:layout_toRightOf="@+id/blue"
       />
    <TextView
        android:id="@+id/yelow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_3"
        android:background="@color/colorYelow"
        android:gravity="center"
        android:layout_below="@+id/red"
        android:layout_toRightOf="@+id/red"
        />
    <TextView
        android:id="@+id/grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_4"
        android:background="@color/colorGrey"
        android:gravity="center"
        android:layout_below="@+id/yelow"
        android:layout_toRightOf="@+id/yelow"
         />

    <TextView
        android:id="@+id/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_5"
        android:background="@color/colorGreen"
        android:gravity="center"
        android:layout_below="@+id/grey"
        android:layout_toRightOf="@+id/grey"
        />
    <TextView
        android:id="@+id/grey2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_4"
        android:background="@color/colorGrey"
        android:gravity="center"
        android:layout_below="@+id/green"
        android:layout_toRightOf="@+id/yelow"
        />

    <TextView
        android:id="@+id/yelow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_3"
        android:background="@color/colorYelow"
        android:gravity="center"
        android:layout_below="@+id/grey2"
        android:layout_toRightOf="@+id/red"
        />

    <TextView
        android:id="@+id/red2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_2"
        android:background="@color/colorRed"
        android:gravity="center"
        android:layout_below="@+id/yelow2"
        android:layout_toRightOf="@+id/blue"
        />


    <TextView
        android:id="@+id/blue2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nazwa_1"
        android:background="@color/colorBlue"
        android:gravity="center"
        android:layout_below="@+id/red2"
        />
</RelativeLayout>