<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/login"
        android:src="@drawable/google" />

    <TextView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/login"
        android:text="@string/nazwa6" />


    <EditText
        android:id="@+id/login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:inputType="text"
        android:maxLines="1" />

    <EditText
        android:id="@+id/haslo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_centerInParent="true"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/log"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/haslo"
        android:text="@string/nazwa7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/haslo"
        android:layout_centerHorizontal="true"
        android:background="@color/colorRed"
        android:text="@string/nazwa8" />


</RelativeLayout>